--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@ body{
     position: relative;
 }
 
+.clock::after{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 30px;
+    width: 30px;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border-radius: 50%;
+    z-index: 12;
+}
+
 /* Numbers  */
 .numbers{
     --rotation: 0;
@@ -78,7 +91,7 @@ body{
     height: 40%;
     bottom: 50%;
     left: 50%;
-    transform: translateX(-50%) rotate(var(--rotation));
+    transform: translateX(-50%) rotate(calc(var(--rotation)* 1deg));
     transform-origin: bottom;
     background-color: black;
     border-top-left-radius: 50%;
@@ -86,7 +99,7 @@ body{
     z-index: 10;
 }
 .sec{
-    height: 47%;
+    height: 45%;
     width: 3px;
     background-color: red;
 }
@@ -94,7 +107,6 @@ body{
     height: 40%;
     width: 6px;
     background-color: black;
-    transform: rotate(90deg);
 
 }
 .hour{
@@ -102,5 +114,4 @@ body{
     width: 10px;
     background-color: rgb(252, 251, 248);
     border: 1px solid black;
-    transform: rotate(60deg);
 }
